--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	    <div class="container">
             <ul class="nav navbar-nav top_nav">
                 <li><a href="tel:+375333165207"><i class="fa fa-phone"></i>+375 (33) 316-52-07</a></li>
-                <li><a href="mailto:villystroy@gmail.com"><i class="fa fa-envelope-o"></i>villystroy@gmail.com</a></li>
+                <li><a href="mailto:tandemremont@gmail.com"><i class="fa fa-envelope-o"></i>tandemremont@gmail.com</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right social_nav">
                 <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
