--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>ВиллиСтрой</title>
+    <title>Tandem</title>
 
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.png" type="image/x-icon" />
@@ -64,7 +64,7 @@
                     <span class="icon-bar"></span>
                     </button>
                     <picture class="nav navbar-brand">
-                        <img src="images/logo.png" alt="ВиллиСтрой" width="170" height="40">
+                        <img src="images/logo.png" alt="tandem" width="170" height="40">
                     </picture>
                 </div>
             </div>
